# biofeedbackxr-esp32

./: .gitignore  BluetoothService.cpp  BluetoothService.h  CMakeLists.txt  ConnectionCallbacks.cpp  ConnectionCallbacks.h  DisplayManager.cpp  DisplayManager.h  ECGReader.cpp  ECGReader.h  MyServerCallbacks.cpp  MyServerCallbacks.h  bio_feedback_xr.ino  build_and_run.sh
.run/: Build Check.run.xml  Build and Run.run.xml
cmake/Platform/: Arduino.cmake
